--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 @layer utilities{
-  
+ .form{
+  font-family: 'Helvetica Neue', sans-serif;                                                           
+ }
+ .card{
+  backdrop-filter: blur(5px);
+ }
+ .border-1{
+  border-width: 1px;
+ }
 }
