Started chat page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
  .form{
   font-family: 'Helvetica Neue', sans-serif;                                                           
  }
+ main{
+    font-family: 'Helvetica Neue', sans-serif;   
+ }
  .card{
   backdrop-filter: blur(5px);
  }
