--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   font-family: 'Helvetica Neue', sans-serif;                                                           
  }
  main{
-    font-family: 'Helvetica Neue', sans-serif;   
+   font-family: 'Schibsted Grotesk', sans-serif;  
  }
  .card{
   backdrop-filter: blur(5px);
