--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
  }
  .chats::-webkit-scrollbar-thumb{
   background-color: rgb(218, 218, 255);
+  color: rgb(201, 201, 255);
   width: 4px;
   border-radius: 3px;
  }
